2003-12-17  Joseph S. Myers  <jsm@polyomino.org.uk>

	* worm/worm.6: Score is in upper right corner, not upper left
	corner.  Patch from Robert Hunter <roh@cryptocracy.hn.org> in
	Debian bug 209034.

	* atc/atc.6.in: Document that pressing return allows you to "fast
	forward" the game clock.  Patch from Peter Maydell
	<pmaydell@chiark.greenend.org.uk> in Debian bug 216980.

	* PACKAGING: Remove some old version references.

	* INSTALL: Simplify and remove some obsolete information.

	* adventure/Makefile.bsd, adventure/adventure.6, adventure/crc.c,
	adventure/done.c, adventure/hdr.h, adventure/init.c,
	adventure/io.c, adventure/main.c, adventure/save.c,
	adventure/setup.c, adventure/subr.c, adventure/vocab.c,
	adventure/wizard.c, arithmetic/arithmetic.6,
	arithmetic/arithmetic.c, atc/Makefile.bsd, atc/atc.6.in,
	atc/def.h, atc/extern.c, atc/extern.h, atc/grammar.y,
	atc/graphics.c, atc/include.h, atc/input.c, atc/lex.l, atc/list.c,
	atc/log.c, atc/main.c, atc/pathnames.h.in, atc/struct.h,
	atc/tunable.c, atc/tunable.h, atc/update.c,
	backgammon/backgammon/backgammon.6.in,
	backgammon/backgammon/extra.c, backgammon/backgammon/main.c,
	backgammon/backgammon/move.c, backgammon/backgammon/text.c,
	backgammon/backgammon/version.c, backgammon/common_source/allow.c,
	backgammon/common_source/back.h, backgammon/common_source/board.c,
	backgammon/common_source/check.c,
	backgammon/common_source/fancy.c, backgammon/common_source/init.c,
	backgammon/common_source/odds.c, backgammon/common_source/one.c,
	backgammon/common_source/save.c, backgammon/common_source/subs.c,
	backgammon/common_source/table.c, backgammon/teachgammon/data.c,
	backgammon/teachgammon/teach.c, backgammon/teachgammon/ttext1.c,
	backgammon/teachgammon/ttext2.c, backgammon/teachgammon/tutor.c,
	backgammon/teachgammon/tutor.h, banner/banner.6, banner/banner.c,
	battlestar/battlestar.6, battlestar/battlestar.c,
	battlestar/command1.c, battlestar/command2.c,
	battlestar/command3.c, battlestar/command4.c,