@@ -1,7 +1,7 @@
 #!/bin/sh
 # tests/caesar.test - test functionality of caesar.
 #
-# Copyright (c) 1999 Joseph Samuel Myers.
+# Copyright (c) 1999, 2003 Joseph Samuel Myers.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -41,4 +41,9 @@ rm -f test.out
 testno 2
 caesar/caesar 21 <tests/caesar.constin >test.out 2>&1 || failtest
 compare test.out tests/caesar.constout
+rm -f test.out
+
+testno 3
+caesar/caesar <tests/caesar.197816in >test.out 2>&1 || failtest
+compare test.out tests/caesar.197816out
 rm -f test.out
